# bc-scraper3

./: .gitignore  Cargo.toml  flake.nix  package.nix
.cargo/: config.toml
src/: camera.rs  data.rs  interact.rs  main.rs  render.rs  runtime.rs  sim.rs  ui.rs
src/background/: diagnostic.rs  mod.rs  scrape.rs  web.rs
src/background/scraper/: mod.rs  scraper.rs  thread.rs
src/background/web/: cache.rs  client.rs  mod.rs  thread.rs
src/data/: diagnostic.rs  mod.rs
src/diagnostic/: diagnostics.rs  frame.rs  mod.rs
src/render/: diagnostic.rs  mod.rs  nearest.rs
src/sim/: diagnostic.rs  mod.rs
src/ui/: diagnostic.rs  hover.rs  menu.rs  mod.rs  nearest.rs  time.rs
